--- a/style.css
+++ b/style.css
@@ -51,43 +51,34 @@ nav li {
     display: block;
 }
 
-header {
-    background-color: #003366;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
+.first {
+    padding: 30px;
+    background: white;
 }
 
-nav ul {
-    list-style: none;
-    display: flex;
-    padding: 15px;
+.first h1 {
+    margin-bottom: 10px;
+    color: #003366;
+}
+
+.first ul {
+    margin-top: 10px;
+    padding-left: 20px;
+}
+
+#services {
+    padding: 30px;
+}
+
+.card {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
     gap: 20px;
 }
 
-nav a {
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-nav li {
-    position: relative;
-}
-
-/* Dropdown */
-.dropdown-menu {
-    display: none;
-    position: absolute;
-    background-color: #00509e;
-    top: 35px;
-    min-width: 150px;
-}
-
-.dropdown-menu li {
-    padding: 10px;
-}
-
-.dropdown:hover .dropdown-menu {
-    display: block;
+.container {
+    background: white;
+    padding: 15px;
+    text-align: center;
+    border-radius: 5px;
 }
